<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfHandlleActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:text="Handle PDF"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/buttonWebView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:text="@string/web_view"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/buttonAssets"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:text="@string/assets"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/buttonStorage"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:text="@string/storage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/buttonInternet"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="8dp"
        android:text="@string/internet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>